--- a/index.html
+++ b/index.html
@@ -309,7 +309,10 @@
         </div>
         <div class="pull-left info">
           <p>Luis Quintanar</p>
-          <a href="https://www.researchgate.net/profile/Luis_Quintanar"><i class="fa fa-circle text-success"></i> Perfil Researchgate</a>
+          <a href="https://www.researchgate.net/profile/Luis_Quintanar"><i class="fa fa-fw fa-flask text-success"></i></a>
+		  <a href="https://www.youtube.com/channel/UC4ZOUyoqYbZaMl4lszAtr1Q"><i class="fa fa-fw fa-youtube-play text-red"></i></a>
+		  <a href="https://discord.gg/XtQnhK5s"><i class="fa fa-fw fa-commenting-o text-info"></i></a>
+		  <a href="https://github.com/NightRoadIx/ text-white"><i class="fa fa-fw fa-github"></i></a>
         </div>
       </div>
       <!-- search form -->
@@ -555,6 +558,18 @@
             <li><a href="pages/aula/vision/inicio.html"><i class="fa fa-archive text-light-blue"></i> Introducción</a></li>
           </ul>		  
         </li>
+        <li> <!-- Visión Artificial Aplicada -->
+          <a href="#">
+            <i class="fa fa-binoculars text-yellow"></i>
+			<span>VisiónAplicada</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="pages/aula/visionaplicada/inicio.html"><i class="fa fa-archive text-yellow"></i> Introducción</a></li>
+          </ul>		  
+        </li>	
 		
 		<li class="header">EJEMPLOS</li>
 		<li class="treeview"> <!-- Programación -->
