--- a/pages/aula/adprogramas/inicio.html
+++ b/pages/aula/adprogramas/inicio.html
@@ -406,7 +406,7 @@
           </a>
           <ul class="treeview-menu">
             <li><a href="inicio.html"><i class="fa fa-archive text-aqua"></i> Introducción</a></li>
-            <li><a href="inicio2.html"><i class="fa fa-archive text-aqua"></i> Ejercicios I</a></li>
+            <!--<li><a href="inicio2.html"><i class="fa fa-archive text-aqua"></i> Ejercicios I</a></li>
 			<!--<li><a href="inicio3b.html"><i class="fa fa-archive text-aqua"></i> Ejercicios II a</a></li>-->
           </ul>
         </li>
@@ -554,6 +554,18 @@
             <li><a href="../vision/inicio.html"><i class="fa fa-archive text-light-blue"></i> Introducción</a></li>
           </ul>		  
         </li>
+        <li> <!-- Visión Artificial Aplicada -->
+          <a href="#">
+            <i class="fa fa-binoculars text-yellow"></i>
+			<span>VisiónAplicada</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="../visionaplicada/inicio.html"><i class="fa fa-archive text-yellow"></i> Introducción</a></li>
+          </ul>		  
+        </li>		
 		
 		<li class="header">EJEMPLOS</li>
 		<li class="treeview"> <!-- Programación -->
@@ -811,6 +823,7 @@
 		<h4><font color="red">Lista de videos</font></h4>
 			<ul>
 				<li><span> Videos clase Lenguaje de Progamación C# </span> <i class="fa fa-fw fa-youtube-play"></i> <a href="https://www.youtube.com/playlist?list=PLvx0mz6agYRdVya4JByzMmqnrKo5r4Q8P" target="_blank"> --Ir a Youtube-- </a></li>
+				<li><span> Videos clase Lenguaje de Progamación Dart </span> <i class="fa fa-fw fa-youtube-play"></i> <a href="#" target="_blank"> --Ir a Youtube-- </a></li>
 				<li><span> Videos Bases de Programación </span> <i class="fa fa-fw fa-youtube-play"></i> <a href="https://www.youtube.com/playlist?list=PLvx0mz6agYReK3wxHq25lky0G5df3kr1g" target="_blank"> --Ir a Youtube-- </a></li>
 			</ul>
 		<h4> Adicionales </h4>
@@ -825,6 +838,10 @@
 	  <div class="bg-black color-palette">
         <h3>Bibliografía</h3>
 			<ul>
+				<li>A tour of the Dart language, disponible en línea <a href="https://dart.dev/guides/language/language-tour" target="_blank"> --AQUI-- </a></li>			
+				<li>The Dart programming language, Gilad Bracha, Addison-Wesley, 2015, disponible en <a href="http://library.lol/main/E4F1E12109F3A238195CC801C11BECDD" target="_blank"> --AQUI-- </a></li>
+				<li>Flutter for beginners, Alessandro Biessek, Packt Publishing, 2019, disponible en <a href="http://library.lol/main/A9B5E6D1BC37CC613608578A30B5B3AF" target="_blank"> --AQUI-- </a></li>
+				<li>C# Documentation, disponible en <a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank"> --Microsoft .NET Docs-- </a></li>
 				<li>Metodología de la Programación, Cairo Osvaldo, Ed. Alfaomega 3a impresión, México, 2005 disponible en línea<a href="https://es.slideshare.net/jpc0306/metodologia-de-laprogramacion3raedicionosvaldocairobattistutti-51892888" target="_blank"> --Slideshare AQUI-- </a></li>
 				<li>Como programar en C#, Deitel P.J., Deitel H.M., Ed. Prentice Hall 2a impresión, México 2007 disponible en <a href="http://93.174.95.29/_ads/1BBD6760B2294550D9EC0155155418A1" target="_blank"> --Gen.lib.rus.ec-- </a></li>
 				<li>C# Documentation, disponible en <a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank"> --Microsoft .NET Docs-- </a></li>
@@ -841,6 +858,7 @@
         <h3>Sitios con datos adicionales</h3>		
 			<ul>
 				<li>Repl.it, compilador multilenguage en línea<a href="https://repl.it/" target="_blank"> (Repl IDE) </a></li>
+				<li>Algorithm visualizer, visualizador de algoritmos en línea<a href="https://algorithm-visualizer.org/" target="_blank"> (Algorithm-visualizer) </a></li>
 				<li>.NET Fiddle, compilador C# en línea<a href="https://dotnetfiddle.net/" target="_blank"> (.NET Fiddle) </a></li>
 				<li>Codenza, repositorio de programas (Dispositivos móviles)<a href="https://www.jdoodle.com/c-online-compiler" target="_blank"> (Codenza) </a></li>
 				<li>Geeksforgeeks.com, portal de programación<a href="https://www.geeksforgeeks.org/" target="_blank"> (GeeksforGeeks, a computer science portal for geeks) </a></li>
@@ -852,7 +870,9 @@
 	  <div class="bg-navy color-palette"">
         <h3>Herramientas</h3>		
 			<ul type="square">
-				<li>Raptor, diseñador de Diagramas de Flujo <a href="https://raptor.martincarlisle.com/" target="_blank"> PÁGINA OFICIAL </a></li>
+				<li>Android Studio <a href="https://developer.android.com/studio" target="_blank"> PÁGINA OFICIAL </a></li>
+				<li>Compilador Dart en línea <a href="https://dartpad.dev/" target="_blank"> PÁGINA OFICIAL </a></li>
+				<li>Raptor, diseñador de Diagramas de Flujo <a href="https://raptor.martincarlisle.com/" target="_blank"> PÁGINA OFICIAL </a></li>	
 				<li>PseInt, Herramienta para el desarrollo de pseudocódigos <a href="http://pseint.sourceforge.net/" target="_blank"> PÁGINA OFICIAL </a></li>
 				<li>Visual Paradigm, Herramienta para el desarrollo de diagramas <a href="https://www.visual-paradigm.com/download/community.jsp" target="_blank"> PÁGINA OFICIAL (Edición comunitaria) </a></li>
 				<li>SharpDevelop  <a href="https://sourceforge.net/projects/sharpdevelop/" target="_blank"> ENLACE A SOURCEFORGE </a> </li>
