--- a/pages/aula/ansenasistemas/inicio.html
+++ b/pages/aula/ansenasistemas/inicio.html
@@ -417,7 +417,7 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="../ansenasistemas/inicio.html"><i class="fa fa-archive text-aqua"></i> Introducción</a></li>
+            <li><a href="inicio.html"><i class="fa fa-archive text-red"></i> Introducción</a></li>
           </ul>
         </li>
         <li> <!-- Sección Arquitectura de Computadoras -->
@@ -549,9 +549,21 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="inicio.html"><i class="fa fa-archive text-light-blue"></i> Introducción</a></li>
+            <li><a href="../vision/inicio.html"><i class="fa fa-archive text-light-blue"></i> Introducción</a></li>
           </ul>		  
         </li>
+        <li> <!-- Visión Artificial Aplicada -->
+          <a href="#">
+            <i class="fa fa-binoculars text-yellow"></i>
+			<span>VisiónAplicada</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="../visionaplicada/inicio.html"><i class="fa fa-archive text-yellow"></i> Introducción</a></li>
+          </ul>		  
+        </li>		
 		
 		<li class="header">EJEMPLOS</li>
 		<li class="treeview"> <!-- Programación -->
@@ -816,11 +828,18 @@
 						<li><span>Códigos en GitHub</span><i class="fa fa-fw fa-github"></i> <a href="https://github.com/NightRoadIx/SenalesySistemas" target="_blank"> --Ir al repositorio-- </a></li>
 						<li>Presentaciones</li>
 						<ul style="list-style-type:none">
-							<li>Presentación 0000 <a href="#" target="_blank">--DESCARGAR--</a> </li>
+							<li>Presentación 666 <a href="#" target="_blank">--DESCARGAR--</a> </li>
 						</ul>
 						<li>Documentos</li>
 						<ul style="list-style-type:none">
-							<li>Procesamiento de señales <a href="#" target="_blank">--DESCARGAR--</a> </li>
+							<li>Apuntes de señales y sistemas <a href="https://www.dropbox.com/s/d0a2gu2o6093ahr/apunte2parte.pdf?dl=0" target="_blank">--DESCARGAR--</a> </li>
+							<li>Conceptos básicos de Procesamiento digital de señales <a href="https://www.dropbox.com/s/dskolzn82d5aphw/conceptos.pdf?dl=0" target="_blank">--DESCARGAR--</a> </li>
+							<li>La transformada de Laplace <a href="https://www.dropbox.com/s/21ej884j9pigyvg/ImpSolucionEdos.pdf?dl=0" target="_blank">--DESCARGAR--</a> </li>
+							<li>Solución a ejemplos de diagramas a bloques <a href="https://www.dropbox.com/s/10x54y04hmtod60/Soluci%C3%B3n%20a%20ejemplos%20de%20diagramas%20de%20bloques.pdf?dl=0" target="_blank">--DESCARGAR--</a> </li>
+							<li>Tabla de reducción de diagrama a bloques <a href="https://www.dropbox.com/s/o3hducjwxmz8jiw/Tabla%20de%20reducci%C3%B3n%20del%20diagrama%20a%20bloques.pdf?dl=0" target="_blank">--DESCARGAR--</a> </li>
+							<li>Tablas de transformada de Laplace <a href="https://www.dropbox.com/s/zm6jf1950mhj67a/Tablas%20de%20Transformada%20de%20Laplace.pdf?dl=0" target="_blank">--DESCARGAR--</a> </li>
+							<li>Tablas de transformada de Laplace II<a href="https://www.dropbox.com/s/4i3ijtfyge8atta/laplace.pdf?dl=0" target="_blank">--DESCARGAR--</a> </li>
+							<li>Transformada inversa de Laplace <a href="https://www.dropbox.com/s/3h9acvn7z09r0bw/Transformada%20inversa%20de%20Laplace.pdf?dl=0" target="_blank">--DESCARGAR--</a> </li>
 						</ul>
 					</ul>
 					<p>&ensp;</p>
