--- a/pages/aula/progravanzada/inicio.html
+++ b/pages/aula/progravanzada/inicio.html
@@ -554,6 +554,18 @@
             <li><a href="../vision/inicio.html"><i class="fa fa-archive text-light-blue"></i> Introducción</a></li>
           </ul>		  
         </li>
+        <li> <!-- Visión Artificial Aplicada -->
+          <a href="#">
+            <i class="fa fa-binoculars text-yellow"></i>
+			<span>VisiónAplicada</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="../visionaplicada/inicio.html"><i class="fa fa-archive text-yellow"></i> Introducción</a></li>
+          </ul>		  
+        </li>		
 		
 		<li class="header">EJEMPLOS</li>
 		<li class="treeview"> <!-- Programación -->
