--- a/pages/langues/it404.html
+++ b/pages/langues/it404.html
@@ -301,7 +301,10 @@
         </div>
         <div class="pull-left info">
           <p>Luis Quintanar</p>
-          <a href="https://www.researchgate.net/profile/Luis_Quintanar"><i class="fa fa-circle text-success"></i> Profilo Researchgate</a>
+          <a href="https://www.researchgate.net/profile/Luis_Quintanar"><i class="fa fa-fw fa-flask text-success"></i></a>
+		  <a href="https://www.youtube.com/channel/UC4ZOUyoqYbZaMl4lszAtr1Q"><i class="fa fa-fw fa-youtube-play text-red"></i></a>
+		  <a href="https://discord.gg/XtQnhK5s"><i class="fa fa-fw fa-commenting-o text-info"></i></a>
+		  <a href="https://github.com/NightRoadIx/ text-white"><i class="fa fa-fw fa-github"></i></a>
         </div>
       </div>
       <!-- search form -->
@@ -386,7 +389,7 @@
 			<li><a href="ro404.html"><i class="fa fa-language"></i> Română</a></li>
 			<li><a href="ru404.html"><i class="fa fa-language"></i> Pуcский</a></li>
 			<li><a href="sv404.html"><i class="fa fa-language"></i> Sverige</a></li>
-			<li><a href="#"><i class="fa fa-language"></i> Türkçe</a></li>
+			<li><a href="tr404.html"><i class="fa fa-language"></i> Türkçe</a></li>
           </ul>
         </li>
 		
