--- a/pages/langues/tr404.html
+++ b/pages/langues/tr404.html
@@ -30,7 +30,7 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="../../inicio.html" class="logo">
+    <a href="index.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>D</b>hk</span>
       <!-- logo for regular state and mobile devices -->
@@ -301,7 +301,10 @@
         </div>
         <div class="pull-left info">
           <p>Luis Quintanar</p>
-          <a href="https://www.researchgate.net/profile/Luis_Quintanar"><i class="fa fa-circle text-success"></i>Researchgate Profil</a>
+          <a href="https://www.researchgate.net/profile/Luis_Quintanar"><i class="fa fa-fw fa-flask text-success"></i></a>
+		  <a href="https://www.youtube.com/channel/UC4ZOUyoqYbZaMl4lszAtr1Q"><i class="fa fa-fw fa-youtube-play text-red"></i></a>
+		  <a href="https://discord.gg/XtQnhK5s"><i class="fa fa-fw fa-commenting-o text-info"></i></a>
+		  <a href="https://github.com/NightRoadIx/ text-white"><i class="fa fa-fw fa-github"></i></a>
         </div>
       </div>
       <!-- search form -->
