--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -300,7 +300,10 @@
         </div>
         <div class="pull-left info">
           <p>Luis Quintanar</p>
-          <a href="https://www.researchgate.net/profile/Luis_Quintanar"><i class="fa fa-circle text-success"></i> Perfil Researchgate</a>
+          <a href="https://www.researchgate.net/profile/Luis_Quintanar"><i class="fa fa-fw fa-flask text-success"></i></a>
+		  <a href="https://www.youtube.com/channel/UC4ZOUyoqYbZaMl4lszAtr1Q"><i class="fa fa-fw fa-youtube-play text-red"></i></a>
+		  <a href="https://discord.gg/XtQnhK5s"><i class="fa fa-fw fa-commenting-o text-info"></i></a>
+		  <a href="https://github.com/NightRoadIx/ text-white"><i class="fa fa-fw fa-github"></i></a>
         </div>
       </div>
       <!-- search form -->
